--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       # Replace this with steps to deploy to users
       - run:
           name: install pipenv
-          command: 'pip install pipenv'
+          command: 'pip3 install pipenv'
       - run:
           name: activate environment
           command: 'pipenv shell'
